  defined in the .afm file for the current font.
* troff: The ".tkf" request for tracking letter space has been added.
* troff: The ".fallback" request for selecting the order in which fonts
  are searched for missing characters in the current font has been added.
* troff: The ".hidechar" request hides characters from a font which are
  then searched using the fallback sequence.
* [nt]roff: Environments selected with the ".ev" command can be given
  names, and their number is no longer statically limited.
* [nt]roff: The ".evc" request copies another environment to the current
  one.
* [nt]roff: The ".chop" request deletes the last character from a macro,
  string, or diversion.
* [nt]roff: The ".return" request returns immediately from a macro.
* [nt]roff: The "\:" escape inserts an optional line break but generates
  no hyphen if the line is split.
* [nt]roff: The "\~" escape is similar to "\ " but inserts a space that
  stretches like a regular " " when the line is adjusted.
* [nt]roff: The "\E" escape is similar to "\e" but is not interpreted in
  copy mode.
* troff/dpost: The "\X'Sync'" escape forces dpost to write position and
  font information to the generated PostScript. This is sometimes useful
  to ensure that following "\X'PS: ...'" escapes work as expected.
* The "-mpictures" macros have been added from Plan 9 sources.
* The "picpack" preprocessor has been added.
* The file "NEWS" describes new troff language features.
* [nt]roff: There is no static limit on the number of "-m" options anymore.
* [nt]roff: There is no static limit on the ".hw" table anymore.
* [nt]roff: The output of long names with ".pm" and stack dumps has been
  fixed.
* [nt]roff: Nested long-name string references \*[\*...] now work.
* [nt]roff: Tabulators as in ".XY\t" are now correctly handled with -x.
* A new malloc() replacement has been added for performance reasons.
* A bug in the previously supplied realloc() replacement could result in
  heap corruption.

Release 050816